[MODORDERS-1269] Fixed some code smells